force-app/main/default/objects/Service_Records__c/Service_Records__c.object-meta.xml
<CustomObject>
    <label>Service Records</label>
    <nameField>
        <displayFormat>ser-{000}</displayFormat>
        <label>Service Records Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Records</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>