force-app/main/default/objects/Service_Records__c/fields/Appointment__c.field-meta.xml
<CustomField>
    <fullName>Appointment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Appointment</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not match the criteria.</errorMessage>
        <filterItems>
            <field>Appointments__c.Appointment_Date__c</field>
            <operation>lessThan</operation>
            <valueField>Appointments__c.CreatedDate</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Appointments__c</referenceTo>
    <relationshipLabel>Service Records</relationshipLabel>
    <relationshipName>Service_Records</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>