force-app/main/default/objects/Service_Records__c/fields/Quality_Check_Status__c.field-meta.xml
<CustomField>
    <fullName>Quality_Check_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quality Check Status</label>
    <type>Checkbox</type>
</CustomField>