force-app/main/default/objects/Service_Records__c/validationRules/service_status_note.validationRule-meta.xml
<ValidationRule>
    <fullName>service_status_note</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( ISPICKVAL(  Service_Status__c  , &quot;Completed&quot;))</errorConditionFormula>
    <errorDisplayField>Service_Status__c</errorDisplayField>
    <errorMessage>still it is pending</errorMessage>
</ValidationRule>